Update professional experience and about section
- Completely revamped work experience section with detailed roles and responsibilities
  - Added Associate Lead Engineer role at Veoneer Safety Systems
  - Included Embedded Engineer position at Alif Semiconductor
  - Added Design Engineer role at J.P. Electronics
  - Added R&D Engineer role at GreenTronics
- Enhanced About Me section with professional objective
  - Added expertise in FPGA development and hardware debugging
  - Highlighted experience with RTOS and embedded systems
  - Emphasized hardware-software integration skills
- Added relevant technical tags for each position
- Improved overall content structure and readability

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <img src="images/profile.jpg" alt="Sudarshan Iyengar" class="profile-img">
       <h1>Sudarshan Iyengar</h1>
       <p class="title">Senior Embedded Systems Engineer</p>
-      <p>Expert in Embedded C/C++, RTOS, and IoT Solutions</p>
+      <p>Experience in Embedded C/C++, RTOS, FPGA and Embedded Linux</p>
     </div>
   </header>
   
@@ -370,7 +370,7 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-content">
         <div class="about-text">
-          <p>Hello! I'm Sudarshan Iyengar, a Senior Embedded Systems Engineer with over 8 years of experience in designing and developing embedded solutions. I specialize in low-level programming, real-time systems, and IoT applications.</p>
+          <p>Hello! I'm Sudarshan Iyengar, a Senior Embedded Systems Engineer with over 8 years of experience in designing and developing embedded solutions. I specialize in low-level programming, real-time systems, and Realapplications.</p>
           <p>My expertise includes firmware development, device drivers, and hardware-software integration. I'm passionate about creating efficient, reliable, and innovative embedded systems that solve real-world problems.</p>
           <a href="SUDARSHAN-IYENGAR-1992.pdf" class="btn-resume" download>
             <i class="fas fa-file-pdf"></i> Download Resume
@@ -386,71 +386,105 @@
       <h2 class="section-title">Professional Experience</h2>
       
       <div class="timeline">
-        <!-- Experience Item 1 -->
+        <!-- Veoneer Safety Systems -->
         <div class="timeline-item">
           <div class="timeline-content">
             <div class="experience-header">
-              <h3>Senior Embedded Engineer</h3>
-              <span class="experience-date">2020 - Present</span>
+              <h3>Associate Lead Engineer</h3>
+              <span class="experience-date">08/2022 – Present</span>
             </div>
-            <h4>Tech Innovations Inc.</h4>
+            <h4>Veoneer Safety Systems, India</h4>
             <ul class="experience-details">
-              <li>Led the development of embedded firmware for IoT devices, reducing power consumption by 35% through optimized low-power modes</li>
-              <li>Designed and implemented RTOS-based solutions for real-time data acquisition systems</li>
-              <li>Mentored junior engineers and conducted code reviews to maintain high code quality standards</li>
-              <li>Developed custom device drivers for various sensors and communication protocols</li>
+              <li>Developed AXI/AXIS Verilog RTL modules to monitor protocols like SPI/GPIO</li>
+              <li>Implemented GSML stream decoder with DMA, achieving efficient high-speed data transfers</li>
+              <li>Integrated MicroBlaze soft-core with Zynq for Linux IPC and high-speed digital decoding</li>
+              <li>Maintained Yocto, secure boot scripts, and custom device trees</li>
+              <li>Designed Linux DMA drivers for FPGA-to-CPU data streaming</li>
+              <li>Managed QSPI flashing and RTOS driver integration for peripherals (I2C, SPI, UART, CAN, LIN, PWM, Timers, GPIO)</li>
             </ul>
             <div class="experience-tags">
-              <span class="tag">C/C++</span>
+              <span class="tag">Verilog</span>
+              <span class="tag">AXI/AXIS</span>
+              <span class="tag">Linux</span>
+              <span class="tag">DMA</span>
+              <span class="tag">FPGA</span>
+              <span class="tag">RTOS</span>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Alif Semiconductor -->
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <div class="experience-header">
+              <h3>Embedded Engineer</h3>
+              <span class="experience-date">03/2021 – 02/2022</span>
+            </div>
+            <h4>Alif Semiconductor</h4>
+            <ul class="experience-details">
+              <li>Ported applications to ThreadX/FreeRTOS on Cortex-M55 platforms</li>
+              <li>Developed Baremetal Watchdog, Timer, and GPIO drivers</li>
+              <li>Debugged RTOS drivers frameworks with Lauterbach, ULINK, and Segger J-Link</li>
+              <li>Developed and validated RTOS peripheral drivers</li>
+              <li>Partnered with cross-functional teams for feature enhancements</li>
+            </ul>
+            <div class="experience-tags">
               <span class="tag">FreeRTOS</span>
-              <span class="tag">ARM Cortex-M</span>
-              <span class="tag">I2C/SPI</span>
+              <span class="tag">ThreadX</span>
+              <span class="tag">Cortex-M55</span>
+              <span class="tag">Debugging</span>
+              <span class="tag">Baremetal</span>
             </div>
           </div>
         </div>
-
-        <!-- Experience Item 2 -->
+  
+        <!-- J.P. Electronics -->
         <div class="timeline-item">
           <div class="timeline-content">
             <div class="experience-header">
-              <h3>Embedded Systems Engineer</h3>
-              <span class="experience-date">2017 - 2020</span>
+              <h3>Design Engineer</h3>
+              <span class="experience-date">05/2020 – 02/2021</span>
             </div>
-            <h4>Embedded Solutions Ltd.</h4>
+            <h4>J.P. Electronics Pte. Ltd.</h4>
             <ul class="experience-details">
-              <li>Developed and maintained firmware for automotive control units using AUTOSAR architecture</li>
-              <li>Implemented CAN and LIN communication protocols for in-vehicle networking</li>
-              <li>Performed hardware-software integration and debugging using logic analyzers and oscilloscopes</li>
-              <li>Reduced system boot time by 40% through optimization of initialization routines</li>
+              <li>Designed PWM-based lighting control solutions for efficiency</li>
+              <li>Developed Bluetooth/Wi-Fi IoT solutions using Microchip platforms</li>
+              <li>Designed schematics in KiCAD and supported full product lifecycle</li>
+              <li>Provided consulting, prototyping, and troubleshooting for customer projects</li>
             </ul>
             <div class="experience-tags">
-              <span class="tag">AUTOSAR</span>
-              <span class="tag">CAN/LIN</span>
-              <span class="tag">C</span>
-              <span class="tag">Embedded Linux</span>
+              <span class="tag">PWM</span>
+              <span class="tag">IoT</span>
+              <span class="tag">Bluetooth</span>
+              <span class="tag">Wi-Fi</span>
+              <span class="tag">KiCAD</span>
             </div>
           </div>
         </div>
-
-        <!-- Experience Item 3 -->
+  
+        <!-- GreenTronics -->
         <div class="timeline-item">
           <div class="timeline-content">
             <div class="experience-header">
-              <h3>Firmware Engineer</h3>
-              <span class="experience-date">2015 - 2017</span>
+              <h3>R&D Engineer</h3>
+              <span class="experience-date">02/2017 – 04/2020</span>
             </div>
-            <h4>Digital Devices Corp.</h4>
+            <h4>GreenTronics Design Labs India Pvt. Ltd.</h4>
             <ul class="experience-details">
-              <li>Developed bare-metal firmware for microcontrollers in consumer electronics</li>
-              <li>Designed and implemented bootloaders for secure firmware updates</li>
-              <li>Collaborated with hardware team on PCB bring-up and validation</li>
-              <li>Created automated test frameworks for firmware validation</li>
+              <li>Developed buck-boost converters and MPPT charge controllers with validation</li>
+              <li>Contributed to Battery Management System (BMS) analysis for efficiency, safety, and reliability</li>
+              <li>Built sub-1GHz radio-based water-level monitoring (PoC) with capacitive sensing</li>
+              <li>Created LDR and remote-controlled lighting solutions for automation</li>
+              <li>Designed and tested three-phase star-delta starter for motor control</li>
+              <li>Delivered solutions across multiple MCU families, optimizing embedded firmware</li>
+              <li>Led system validation, automated test setups, and compliance testing</li>
             </ul>
             <div class="experience-tags">
-              <span class="tag">Bare-Metal</span>
-              <span class="tag">Bootloaders</span>
-              <span class="tag">C/Assembly</span>
-              <span class="tag">PCB Debugging</span>
+              <span class="tag">Power Electronics</span>
+              <span class="tag">BMS</span>
+              <span class="tag">RF</span>
+              <span class="tag">Motor Control</span>
+              <span class="tag">Embedded Firmware</span>
             </div>
           </div>
         </div>
