Update contact information and social links
- Updated email to sudarshan.iyengar@gmail.com
- Added Indian phone number: +91 73536 39083
- Updated GitHub profile link to github.com/sudi1992
- Updated LinkedIn profile link to include full URL
- Maintained existing contact section styling and layout

These changes ensure that visitors can easily reach out through multiple channels.

--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
             </div>
             <div class="contact-text">
               <h4>Email</h4>
-              <a href="mailto:your.email@example.com">your.email@example.com</a>
+              <a href="mailto:sudarshan.iyengar@gmail.com">sudarshan.iyengar@gmail.com</a>
             </div>
           </div>
           <div class="contact-item">
@@ -1426,7 +1426,7 @@
             </div>
             <div class="contact-text">
               <h4>Phone</h4>
-              <a href="tel:+1234567890">+1 (234) 567-890</a>
+              <a href="tel:+917353639083">+91 73536 39083</a> 
             </div>
           </div>
           <div class="contact-item">
@@ -1447,10 +1447,10 @@
   <footer>
     <div class="container">
       <div class="social-links">
-        <a href="https://github.com/yourusername" class="social-link" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/sudi1992" class="social-link" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://linkedin.com/in/yourusername" class="social-link" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/sudarshan-iyengar-286a9422/" class="social-link" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-linkedin-in"></i>
         </a>
         <a href="https://twitter.com/yourusername" class="social-link" target="_blank" rel="noopener noreferrer">
