--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       background: linear-gradient(135deg, var(--primary), var(--dark));
       color: white;
       padding: 3rem 0;
-      text-align: center;
+      text-align: centerE
     }
 
     .profile-img {
@@ -379,7 +379,65 @@
         </div>
       </div>
     </div>
-  </section>
+  </section><!-- About Section -->
+<section id="about">
+  <div class="container">
+    <h2 class="section-title">About Me</h2>
+    <div class="about-content">
+      <div class="about-text">
+        <p>
+          Hello! I'm <strong>Sudarshan Iyengar</strong>, an Embedded Systems Engineer with over 
+          8 years of experience designing and delivering embedded solutions. 
+          I specialize in low-level programming, real-time operating systems, and 
+          embedded Linux applications.
+        </p>
+        <p>
+          I have a strong background in custom board bring-up, hardware-software 
+          integration, and FPGA-based system development. My experience includes 
+          developing bare-metal and RTOS-based device drivers across multiple MCU 
+          families.
+        </p>
+        <a href="SUDARSHAN-IYENGAR-1992.pdf" class="btn-resume" download>
+          📄 Download Resume
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+  #about {
+    background: #f9f9f9;
+    padding: 60px 20px;
+    text-align: center;
+  }
+  .section-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #2c3e50;
+  }
+  .about-text p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #444;
+    max-width: 700px;
+    margin: 0 auto 20px;
+  }
+  .btn-resume {
+    display: inline-block;
+    padding: 12px 24px;
+    background: #007acc;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: background 0.3s ease;
+  }
+  .btn-resume:hover {
+    background: #005f99;
+  }
+</style>
+
 
   <!-- Experience Section -->
   <section id="experience">
@@ -472,12 +530,12 @@
             </div>
             <h4>GreenTronics Design Labs India Pvt. Ltd.</h4>
             <ul class="experience-details">
-              <li>Developed buck-boost converters and MPPT charge controllers with validation</li>
+              <li>Contributed and validated buck-boost converters and MPPT charge controllers</li>
               <li>Contributed to Battery Management System (BMS) analysis for efficiency, safety, and reliability</li>
-              <li>Built sub-1GHz radio-based water-level monitoring (PoC) with capacitive sensing</li>
-              <li>Created LDR and remote-controlled lighting solutions for automation</li>
-              <li>Designed and tested three-phase star-delta starter for motor control</li>
-              <li>Delivered solutions across multiple MCU families, optimizing embedded firmware</li>
+              <li>Contributed to sub-1GHz radio-based water-level monitoring (PoC) with capacitive sensing</li>
+              <li>Contributed to LDR and remote-controlled lighting solutions for automation</li>
+              <li>Contributed to three-phase star-delta starter for motor control</li>
+              <li>Delivered porting solutions across multiple MCU families, optimizing embedded firmware</li>
               <li>Led system validation, automated test setups, and compliance testing</li>
             </ul>
             <div class="experience-tags">
@@ -790,5 +848,191 @@
       });
     });
   </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sudarshan Iyengar | Embedded Engineer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+      scroll-behavior: smooth; /* smooth scrolling */
+    }
+    header {
+      background: #007acc;
+      color: #fff;
+      text-align: center;
+      padding: 60px 20px 40px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 32px;
+    }
+    header p {
+      margin: 10px 0 0;
+      font-size: 16px;
+    }
+    nav {
+      background: #005f99;
+      padding: 10px 0;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+    .section-title {
+      font-size: 24px;
+      color: #2c3e50;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    ul {
+      text-align: left;
+      max-width: 700px;
+      margin: 0 auto 20px;
+      padding: 0;
+      list-style: none;
+    }
+    ul li::before {
+      content: "✔ ";
+      color: #007acc;
+      font-weight: bold;
+    }
+    .resume-frame {
+      position: relative;
+      padding-bottom: 120%;
+      height: 0;
+      overflow: hidden;
+      max-width: 100%;
+    }
+    .resume-frame iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 15px;
+      background: #007acc;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #005f99;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #eee;
+      margin-top: 30px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Sudarshan Iyengar</h1>
+    <p>Embedded Engineer | 8+ Yrs | RTOS • Bare-metal Drivers • Embedded Linux • FPGA</p>
+  </header>
+
+  <!-- Navigation -->
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#experience">Experience</a>
+    <a href="#resume">Resume</a>
+  </nav>
+
+  <!-- About -->
+  <section id="about">
+    <h2 class="section-title">About Me</h2>
+    <p>
+      Hello! I'm <strong>Sudarshan Iyengar</strong>, an Embedded Systems Engineer with 8+ years 
+      of experience designing and delivering embedded solutions. I specialize in 
+      low-level programming, real-time operating systems, and embedded Linux applications.
+    </p>
+    <p>
+      I have a strong background in custom board bring-up, hardware-software 
+      integration, and FPGA-based system development. My experience includes developing 
+      bare-metal and RTOS-based device drivers across multiple MCU families.
+    </p>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills">
+    <h2 class="section-title">Skills</h2>
+    <ul>
+      <li>Linux & Drivers: DMA drivers, device trees, Yocto builds, FPGA-CPU communication</li>
+      <li>FPGA & RTL: Custom AXI/AXIS Verilog modules, protocol monitors, stream schedulers (Zynq/Artix)</li>
+      <li>RTOS & MCUs: FreeRTOS, ThreadX, peripheral drivers across multiple MCU families</li>
+      <li>IoT & Wireless: Bluetooth/Wi-Fi solutions on Microchip, sub-1GHz sensing</li>
+      <li>Power Electronics: Buck-boost converters, MPPT controllers, battery management</li>
+      <li>System Validation: Automated setups, compliance testing, cross-team debug</li>
+    </ul>
+  </section>
+
+  <!-- Experience -->
+  <section id="experience">
+    <h2 class="section-title">Experience Highlights</h2>
+    <ul>
+      <li>Designed and integrated Linux DMA drivers, device trees, and Yocto builds for FPGA-CPU communication.</li>
+      <li>Developed custom AXI/AXIS Verilog modules, protocol monitors, and data schedulers on Zynq/Artix FPGAs.</li>
+      <li>Ported applications to FreeRTOS/ThreadX and delivered peripheral drivers for multiple MCU families.</li>
+      <li>Built proof-of-concept Bluetooth/Wi-Fi solutions and sub-1GHz sensing for smart monitoring systems.</li>
+      <li>Worked on buck-boost converters, MPPT controllers, and battery management analysis.</li>
+      <li>Led system validation, automated test setups, and production-grade compliance testing.</li>
+    </ul>
+  </section>
+
+  <!-- Resume -->
+  <section id="resume">
+    <h2 class="section-title">Resume</h2>
+    <div class="resume-frame">
+      <iframe src="SUDARSHAN-IYENGAR-1992.pdf"></iframe>
+    </div>
+    <!-- Fallback -->
+    <!--
+    <div class="resume-frame">
+      <iframe src="https://docs.google.com/gview?url=https://yourusername.github.io/SUDARSHAN-IYENGAR-1992.pdf&embedded=true"></iframe>
+    </div>
+    -->
+    <p style="text-align:center;">
+      <a href="SUDARSHAN-IYENGAR-1992.pdf" class="btn" download>📄 Download Resume</a>
+    </p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Sudarshan Iyengar | Hosted on GitHub Pages</p>
+  </footer>
+
 </body>
 </html>
