Fix website issues and update documentation
- Remove broken favicon reference
- Comment out placeholder social media and project links
- Update README to reflect correct fonts (JetBrains Mono instead of Fira Code)
- Fix markdown formatting in README

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Sudarshan Iyengar">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/images/favicon.png">
+  <!-- <link rel="icon" type="image/png" href="assets/images/favicon.png"> -->
   
   <!-- Preload Critical Resources -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -722,8 +722,8 @@
           <div class="project-header">
             <h3>Custom RTOS for Microcontrollers</h3>
             <div class="project-links">
-              <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-              <a href="#" aria-label="External Link"><i class="fas fa-external-link-alt"></i></a>
+              <!-- <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a> -->
+              <!-- <a href="#" aria-label="External Link"><i class="fas fa-external-link-alt"></i></a> -->
             </div>
           </div>
           <p class="project-description">A lightweight real-time operating system designed for resource-constrained microcontrollers, featuring preemptive multitasking and inter-process communication.</p>
@@ -786,7 +786,7 @@
         <i class="fas fa-envelope"></i> Say Hello
       </a>
       <div class="social-links">
-        <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <!-- <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
@@ -794,7 +794,7 @@
         </a>
         <a href="https://twitter.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
           <i class="fab fa-twitter"></i>
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
@@ -804,9 +804,9 @@
     <div class="container">
       <p>Designed & Built by Sudarshan Iyengar</p>
       <p class="footer-links">
-        <a href="#">Privacy Policy</a>
+        <!-- <a href="#">Privacy Policy</a>
         <span>•</span>
-        <a href="#">Imprint</a>
+        <a href="#">Imprint</a> -->
       </p>
     </div>
   </footer>
