Updated contact information and professional summary
- Updated email to sudi.iyengar@gmail.com
- Updated phone number to +91-7353639083
- Updated location to Bengaluru, Karnataka, India
- Updated LinkedIn profile to linkedin.com/in/sudarshan-iyengar-286a9422
- Updated GitHub profile to github.com/sudi1992
- Updated professional summary to reflect 8+ years experience
- Enabled social media links with proper URLs

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       <h2 class="section-title">Professional Summary</h2>
       <div class="summary-content">
         <div class="summary-text">
-          <p>Senior Embedded Systems Engineer with 10+ years of experience in embedded software development, FPGA design, and system architecture. Proven track record of delivering high-performance, reliable embedded solutions across automotive, industrial, and IoT domains.</p>
+          <p>Senior Embedded Systems Engineer with 8+ years of experience developing bare-metal and RTOS-based device drivers. Strong background in custom board bring-up and hardware-software integration. Recognized for delivering reliable solutions under tight deadlines and driving continuous improvement.</p>
           
           <div class="highlights-grid">
             <div class="highlight-card">
@@ -782,19 +782,16 @@
         I'm currently looking for new opportunities. Whether you have a question or just want to say hi, 
         I'll do my best to get back to you!
       </p>
-      <a href="mailto:your.email@example.com" class="btn btn-primary">
+      <a href="mailto:sudi.iyengar@gmail.com" class="btn btn-primary">
         <i class="fas fa-envelope"></i> Say Hello
       </a>
       <div class="social-links">
-        <!-- <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <a href="https://github.com/sudi1992" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+        <a href="https://linkedin.com/in/sudarshan-iyengar-286a9422" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <i class="fab fa-linkedin-in"></i>
         </a>
-        <a href="https://twitter.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-          <i class="fab fa-twitter"></i>
-        </a> -->
       </div>
     </div>
   </section>
